[package]
name = "fml"
version = "0.9.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = {version = "0.18.1", features = ["lexer"]}

[dependencies]
lalrpop-util = "0.18.1"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-lexpr = "0.1.0"
serde_yaml = "0.8"
anyhow = "1.0.37"
clap = "3.0.0-beta.2"